<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_stroke"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="36dp"
            android:layout_margin="8dp"
            android:elevation="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/img_news"
                android:layout_width="64dp"
                android:layout_height="64dp"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/img" />


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/title"
            android:textSize="20sp"
            android:maxLines="1"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cl_item"
            app:layout_constraintStart_toEndOf="@id/card_image"/>

        <TextView
            android:id="@+id/txv_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/author"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txv_title"
            app:layout_constraintStart_toEndOf="@id/card_image"/>

        <TextView
            android:id="@+id/txv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/date"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/txv_author"
            app:layout_constraintStart_toEndOf="@id/card_image"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>